--- a/insercion.html
+++ b/insercion.html
@@ -72,7 +72,7 @@
                         </div>
 
 <!-- Boton de enviar -->
-                        <button type="submit" class="boton-nuevo" onclick="confirm('Estas seguro de que los datos son correctos?')">
+                        <button type="submit" class="boton-nuevo" onclick="location.href='consulta.html'">
                          Confirmar insertar
                         </button>
                 </form>
