--- a/edicion.html
+++ b/edicion.html
@@ -72,7 +72,7 @@
                         </div>
 
 <!-- Boton de enviar -->
-                        <button type="submit" class="boton-nuevo" onclick="confirm('Estas seguro de que los datos son correctos?')">
+                        <button type="submit" class="boton-nuevo" >
                          Confirmar insertar
                         </button>
                 </form>
