--- a/edicion.html
+++ b/edicion.html
@@ -17,7 +17,7 @@
             <div class="col-xs-12 col-md-8 col-lg-6 m-auto">
 <!-- formulario de bootstrap -->
             <form method="post" action="/consulta.html" class="border border-primary p-4 fondoazul">
-                     <h1 class="text-center py-3 text-dark">Crea un nuevo HEART</h1>
+                     <h1 class="text-center py-3 text-dark">Modifica un HEART</h1>
 
 
 <!-- Introducción de nombre-->
